Tons of work.  Too much to list.

--- a/MvvmTools.Core/Converters/Converters.xaml
+++ b/MvvmTools.Core/Converters/Converters.xaml
@@ -14,5 +14,6 @@
     <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
     <local:ProjectDisplayNameConverter x:Key="ProjectDisplayNameConverter" />
     <local:ZeroToCollapsedConverter x:Key="ZeroToCollapsedConverter" />
+    <local:EmptyToCollapsedConverter x:Key="EmptyToCollapsedConverter" />
 
 </ResourceDictionary>
