--- a/MvvmTools.Core/Styles/ComboBoxEx.xaml
+++ b/MvvmTools.Core/Styles/ComboBoxEx.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:MvvmTools.Core.Controls"
-                    xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+                    xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Luna">
 
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
