--- a/MvvmTools.Core/Styles/GroupBox.xaml
+++ b/MvvmTools.Core/Styles/GroupBox.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+                    xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Luna">
 
     <SolidColorBrush x:Key="GroupLvl1AccentBrush" Color="#095169" />
     <SolidColorBrush x:Key="GroupLvl2AccentBrush" Color="#0C0636" />
