Allowed for empty paths and namespaces, vm and view suffixes.

--- a/MvvmTools.Core/Converters/Converters.xaml
+++ b/MvvmTools.Core/Converters/Converters.xaml
@@ -15,5 +15,6 @@
     <local:ProjectDisplayNameConverter x:Key="ProjectDisplayNameConverter" />
     <local:ZeroToCollapsedConverter x:Key="ZeroToCollapsedConverter" />
     <local:EmptyToCollapsedConverter x:Key="EmptyToCollapsedConverter" />
+    <local:EmptyStringConverter x:Key="EmptyStringConverter"/>
 
 </ResourceDictionary>
