--- a/MvvmTools.Core/Views/OptionsGeneralUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsGeneralUserControl.xaml
@@ -1,16 +1,17 @@
-﻿<UserControl x:Class="MvvmTools.Core.Views.OptionsGeneralUserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
-             xmlns:views="clr-namespace:MvvmTools.Core.Views"
-             x:Name="MyUserControl"
-             d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
-                                              IsDesignTimeCreatable=False}"
-             d:DesignHeight="300"
-             d:DesignWidth="300"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="MvvmTools.Core.Views.OptionsGeneralUserControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
+    xmlns:views="clr-namespace:MvvmTools.Core.Views"
+    x:Name="MyUserControl"
+    d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
+                                     IsDesignTimeCreatable=False}"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -31,10 +32,11 @@
             <!--  Header  -->
             <views:HeaderUserControl />
 
-            <ScrollViewer Grid.Row="1"
-                          HorizontalScrollBarVisibility="Disabled"
-                          Padding="0,0,3,0"
-                          VerticalScrollBarVisibility="Auto">
+            <ScrollViewer
+                Grid.Row="1"
+                Padding="0,0,3,0"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -54,40 +56,46 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Margin="0,0,5,0"
-                                       VerticalAlignment="Center"
-                                       Text="When there are multiple possibilities:" />
-                            <ComboBox Grid.Row="0"
-                                      Grid.Column="1"
-                                      DisplayMemberPath="Description"
-                                      ItemsSource="{Binding GoToViewOrViewModelOptions}"
-                                      SelectedValue="{Binding SelectedGoToViewOrViewModelOption}"
-                                      SelectedValuePath="Value" />
+                            <TextBlock
+                                Margin="0,0,5,0"
+                                VerticalAlignment="Center"
+                                Text="When there are multiple possibilities:" />
+                            <ComboBox
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                DisplayMemberPath="Description"
+                                ItemsSource="{Binding GoToViewOrViewModelOptions}"
+                                SelectedValue="{Binding SelectedGoToViewOrViewModelOption}"
+                                SelectedValuePath="Value" />
 
-                            <TextBlock Grid.Row="1"
-                                       Grid.Column="0"
-                                       Margin="0,5,5,0"
-                                       VerticalAlignment="Center"
-                                       Text="Search Entire Solution:" />
-                            <CheckBox Grid.Row="1"
-                                      Grid.Column="1"
-                                      Margin="0,5,0,0"
-                                      VerticalAlignment="Center"
-                                      IsChecked="{Binding GoToViewOrViewModelSearchSolution}" />
-                            <TextBlock Grid.Row="2"
-                                       Grid.Column="0"
-                                       Grid.ColumnSpan="2"
-                                       Margin="0,2,0,0"
-                                       FontSize="10"
-                                       Text="If checked, you might get false positives but more likely to find your views and view models.  If unchecked, follows &quot;Solution and Projects&quot; settings strictly."
-                                       TextWrapping="WrapWithOverflow" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="0,5,5,0"
+                                VerticalAlignment="Center"
+                                Text="Search Entire Solution:" />
+                            <CheckBox
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Margin="0,5,0,0"
+                                VerticalAlignment="Center"
+                                IsChecked="{Binding GoToViewOrViewModelSearchSolution}" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Margin="0,2,0,0"
+                                FontSize="10"
+                                Text="If checked, you might get false positives but more likely to find your views and view models.  If unchecked, follows &quot;Solution and Projects&quot; settings strictly."
+                                TextWrapping="WrapWithOverflow" />
                         </Grid>
                     </GroupBox>
 
                     <!--  Row 1 contains the the view suffixes.  -->
-                    <GroupBox Grid.Row="1"
-                              Margin="0,15,0,0"
-                              Header="View Suffixes">
+                    <GroupBox
+                        Grid.Row="1"
+                        Margin="0,15,0,0"
+                        Header="View Suffixes">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -96,55 +104,62 @@
                             </Grid.ColumnDefinitions>
 
                             <!--  View Suffixes  -->
-                            <TextBlock Grid.Row="0"
-                                       Margin="0,0,5,0"
-                                       VerticalAlignment="Top"
-                                       Text="View Suffixes:" />
-                            <DataGrid x:Name="ViewSuffixesDataGrid"
-                                      Grid.Row="0"
-                                      Grid.Column="1"
-                                      AutoGenerateColumns="False"
-                                      CanUserAddRows="False"
-                                      CanUserDeleteRows="False"
-                                      CanUserReorderColumns="False"
-                                      CanUserResizeColumns="False"
-                                      CanUserResizeRows="False"
-                                      CanUserSortColumns="False"
-                                      GridLinesVisibility="None"
-                                      HeadersVisibility="None"
-                                      ItemsSource="{Binding ViewSuffixesView}">
+                            <TextBlock
+                                Grid.Row="0"
+                                Margin="0,0,5,0"
+                                VerticalAlignment="Top"
+                                Text="View Suffixes:" />
+                            <DataGrid
+                                x:Name="ViewSuffixesDataGrid"
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                AutoGenerateColumns="False"
+                                CanUserAddRows="False"
+                                CanUserDeleteRows="False"
+                                CanUserReorderColumns="False"
+                                CanUserResizeColumns="False"
+                                CanUserResizeRows="False"
+                                CanUserSortColumns="False"
+                                GridLinesVisibility="None"
+                                HeadersVisibility="None"
+                                ItemsSource="{Binding ViewSuffixesView}">
                                 <DataGrid.Columns>
                                     <DataGridTemplateColumn Width="*">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate DataType="viewModels:StringViewModel">
-                                                <TextBlock MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown"
-                                                           Padding="3,1"
-                                                           Text="{Binding Value,
-                                                                          Mode=OneWay}" />
+                                                <TextBlock
+                                                    Padding="3,1"
+                                                    MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown"
+                                                    Text="{Binding Value, Converter={StaticResource EmptyStringConverter}, ConverterParameter='(none)', Mode=OneWay}" />
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
                                 </DataGrid.Columns>
                             </DataGrid>
-                            <StackPanel Grid.Row="0"
-                                        Grid.Column="2"
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Top">
-                                <Button Command="{Binding AddViewSuffixCommand}"
-                                        Content="Add"
-                                        Padding="3,0" />
-                                <Button Margin="0,5,0,0"
-                                        Command="{Binding EditViewSuffixCommand}"
-                                        Content="Edit"
-                                        Padding="3,0" />
-                                <Button Margin="0,5,0,0"
-                                        Command="{Binding DeleteViewSuffixCommand}"
-                                        Content="Delete"
-                                        Padding="3,0" />
-                                <Button Margin="0,30,0,0"
-                                        Command="{Binding RestoreDefaultViewSuffixesCommand}"
-                                        Content="Defaults"
-                                        Padding="3,0" />
+                            <StackPanel
+                                Grid.Row="0"
+                                Grid.Column="2"
+                                Margin="5,0,0,0"
+                                VerticalAlignment="Top">
+                                <Button
+                                    Padding="3,0"
+                                    Command="{Binding AddViewSuffixCommand}"
+                                    Content="Add" />
+                                <Button
+                                    Margin="0,5,0,0"
+                                    Padding="3,0"
+                                    Command="{Binding EditViewSuffixCommand}"
+                                    Content="Edit" />
+                                <Button
+                                    Margin="0,5,0,0"
+                                    Padding="3,0"
+                                    Command="{Binding DeleteViewSuffixCommand}"
+                                    Content="Delete" />
+                                <Button
+                                    Margin="0,30,0,0"
+                                    Padding="3,0"
+                                    Command="{Binding RestoreDefaultViewSuffixesCommand}"
+                                    Content="Defaults" />
                             </StackPanel>
                         </Grid>
                     </GroupBox>
@@ -152,6 +167,6 @@
             </ScrollViewer>
         </Grid>
 
-        <views:BusyUserControl Grid.RowSpan="2"/>
+        <views:BusyUserControl Grid.RowSpan="2" />
     </Grid>
 </UserControl>
