--- a/MvvmTools.Core/Views/OptionsTemplateOptionsUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsTemplateOptionsUserControl.xaml
@@ -1,17 +1,18 @@
-﻿<UserControl x:Class="MvvmTools.Core.Views.OptionsTemplateOptionsUserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:behaviors="clr-namespace:MvvmTools.Core.Behaviors"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
-             xmlns:views="clr-namespace:MvvmTools.Core.Views"
-             d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
-                                              IsDesignTimeCreatable=False}"
-             d:DesignHeight="300"
-             d:DesignWidth="300"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="MvvmTools.Core.Views.OptionsTemplateOptionsUserControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behaviors="clr-namespace:MvvmTools.Core.Behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
+    xmlns:views="clr-namespace:MvvmTools.Core.Views"
+    d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
+                                     IsDesignTimeCreatable=False}"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -40,29 +41,23 @@
                 Local Templates Folder (configured below).
             </TextBlock>
             <TextBlock Margin="0,10,0,0" TextWrapping="WrapWithOverflow">
-                If you'd like to share your templates with the community, please email the &apos;LocalTemplates.xml&apos; file to
-                <Hyperlink Click="Hyperlink_OnClick" NavigateUri="mailto://mvvmtools@outlook.com">mvvmtools@outlook.com</Hyperlink>
-                and I'll consider adding it for the next release.
-            </TextBlock>
+                If you'd like to share your templates with the community, please email the &apos;LocalTemplates.xml&apos; file to<Hyperlink Click="Hyperlink_OnClick" NavigateUri="mailto://mvvmtools@outlook.com">mvvmtools@outlook.com</Hyperlink>
+                and I'll consider adding it for the next release.</TextBlock>
             <TextBlock Margin="0,10,0,0" TextWrapping="WrapWithOverflow">
-                Please be sure to indicate the
-                <Bold>name of the template(s)</Bold>
-                and
-                <Bold>language(s)</Bold>
+                Please be sure to indicate the<Bold>name of the template(s)</Bold>
+                and<Bold>language(s)</Bold>
                 you want to share.
                 You may want to include your your name (e.g. &apos;Original author: Bob Smith&apos;) in the description
-                of the template.  Note that I might make some changes or corrections before inclusion.
-            </TextBlock>
+                of the template.  Note that I might make some changes or corrections before inclusion.</TextBlock>
             <TextBlock Margin="0,10,0,0" TextWrapping="WrapWithOverflow">
-                I'm certainly
-                <Hyperlink Click="Hyperlink_OnClick" NavigateUri="mailto://mvvmtools@outlook.com">open to suggestions / help</Hyperlink>
-                on existing templates.
-            </TextBlock>
+                I'm certainly<Hyperlink Click="Hyperlink_OnClick" NavigateUri="mailto://mvvmtools@outlook.com">open to suggestions / help</Hyperlink>
+                on existing templates.</TextBlock>
         </StackPanel>
 
-        <GroupBox Grid.Row="2"
-                  Margin="0,10,0,0"
-                  Header="Local Templates">
+        <GroupBox
+            Grid.Row="2"
+            Margin="0,10,0,0"
+            Header="Local Templates">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -76,30 +71,34 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock Margin="0,0,5,0" Text="Local Templates Folder:" />
-                <TextBox Grid.Row="0"
-                         Grid.Column="1"
-                         Text="{Binding LocalTemplateFolder,
-                                        Mode=TwoWay}" />
-                <Button Grid.Row="0"
-                        Grid.Column="2"
-                        Margin="5,0,0,0"
-                        Content="Browse..."
-                        Padding="3,1">
+                <TextBox
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Text="{Binding LocalTemplateFolder, Mode=TwoWay}" />
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Margin="5,0,0,0"
+                    Padding="3,1"
+                    Content="Browse...">
                     <i:Interaction.Behaviors>
                         <behaviors:FolderDialogBehavior FolderName="{Binding LocalTemplateFolder, Mode=TwoWay}" />
                     </i:Interaction.Behaviors>
                 </Button>
-                <StackPanel Grid.Row="1"
-                            Grid.Column="1"
-                            Margin="0,3,0,0"
-                            Orientation="Horizontal">
-                    <Button Command="{Binding CreateLocalTemplateFolderCommand}"
-                            Content="Create Folder..."
-                            Padding="3,1" />
-                    <Button Margin="5,0,0,0"
-                            Command="{Binding OpenLocalTemplateFolderCommand}"
-                            Content="Open Folder..."
-                            Padding="3,1" />
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="0,3,0,0"
+                    Orientation="Horizontal">
+                    <Button
+                        Padding="3,1"
+                        Command="{Binding CreateLocalTemplateFolderCommand}"
+                        Content="Create Folder..." />
+                    <Button
+                        Margin="5,0,0,0"
+                        Padding="3,1"
+                        Command="{Binding OpenLocalTemplateFolderCommand}"
+                        Content="Open Folder..." />
                 </StackPanel>
             </Grid>
         </GroupBox>
