--- a/MvvmTools/Styles/ComboBoxEx.xaml
+++ b/MvvmTools/Styles/ComboBoxEx.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:MvvmTools.Controls"
     xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-    xmlns:system="clr-namespace:System;assembly=mscorlib"
-    xmlns:controls="clr-namespace:MvvmTools.Controls">
+    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
