Running in Preview

--- a/MvvmTools/Views/OptionsSolutionAndProjectsUserControl.xaml
+++ b/MvvmTools/Views/OptionsSolutionAndProjectsUserControl.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:views="clr-namespace:MvvmTools.Views"
+             xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              x:Name="MyUserControl"
              d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
                                               IsDesignTimeCreatable=False}"
