--- a/MvvmTools/Views/TemplateDialog.xaml
+++ b/MvvmTools/Views/TemplateDialog.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:MvvmTools.Controls"
              xmlns:views="clr-namespace:MvvmTools.Views"
+             xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              x:Name="Root"
              Width="800"
              Height="500"
