--- a/MvvmTools/Views/FieldDialog.xaml
+++ b/MvvmTools/Views/FieldDialog.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:MvvmTools.Controls"
+             xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              x:Name="Root"
              Width="500"
              Height="350"
