--- a/MvvmTools/Views/LocationDescriptorUserControl.xaml
+++ b/MvvmTools/Views/LocationDescriptorUserControl.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:MvvmTools.Controls"
+             xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:LocationDescriptorUserControlViewModel}"
              d:DesignHeight="300"
              d:DesignWidth="500"
