--- a/MvvmTools/Views/OptionsTemplateOptionsUserControl.xaml
+++ b/MvvmTools/Views/OptionsTemplateOptionsUserControl.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:MvvmTools.Views"
     xmlns:behaviors="clr-namespace:MvvmTools.Behaviors"
+    xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
     d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="300"
