--- a/MvvmTools/Views/ProjectOptionsUserControl.xaml
+++ b/MvvmTools/Views/ProjectOptionsUserControl.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:views="clr-namespace:MvvmTools.Views"
+             xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:ProjectOptionsUserControlViewModel}"
              d:DesignHeight="300"
              d:DesignWidth="300"
