--- a/MvvmTools/Views/SelectFileDialog.xaml
+++ b/MvvmTools/Views/SelectFileDialog.xaml
@@ -5,10 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:MvvmTools.Views"
+    xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
     Title="Select File - MVVM Tools"
     Width="600"
     Height="300"
-    d:DataContext="{d:DesignInstance viewModels1:SelectFileDialogViewModel}"
+    d:DataContext="{d:DesignInstance viewModels:SelectFileDialogViewModel}"
     FontFamily="Microsoft Sans Serif"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
