--- a/MvvmTools/Views/HeaderUserControl.xaml
+++ b/MvvmTools/Views/HeaderUserControl.xaml
@@ -23,7 +23,7 @@
                    Margin="0,0,0,1"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Bottom"
-                   Stroke="White" />
+                   Stroke="Black" />
         <Rectangle Grid.Row="0"
                    Height="1"
                    HorizontalAlignment="Stretch"
